--- a/charts/spring-boot-websocket-chat-demo/values.yaml
+++ b/charts/spring-boot-websocket-chat-demo/values.yaml
@@ -21,8 +21,7 @@ ingress:
   enabled: true
   hostname: chattybot.k8s.az.jessicadeen.com
   annotations:
-    #  kubernetes.io/ingress.class: nginx
-     kubernetes.io/ingress.class: addon-http-application-routing
+     kubernetes.io/ingress.class: nginx
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubernetes.io/tls-acme: "true"
   tls: true
