--- a/.github/workflows/jdk8s-cicd.yaml
+++ b/.github/workflows/jdk8s-cicd.yaml
@@ -311,93 +311,151 @@ jobs:
       #       name: ttsa
       #       namespace: $nameSpace
       #     EOF
-  # buildImages:
-  #   runs-on: self-hosted
-  #   needs: deployInfra
-  #   steps:
-  #     - name: "Checkout TailwindTraders Backend Source"
-  #       run: |
-  #         # fresh download
-  #         rm -rf TailwindTraders-Backend
-  #         git clone https://github.com/microsoft/TailwindTraders-Backend.git
-  #         # git -C TailwindTraders-Backend checkout ed86d5f
-  #     - name: "Create Helm gvalues file"
-  #       run: |
-  #         pwsh $tailwindChartValuesScript -resourceGroup $resourceGroup -outputFile $tailwindChartValues
-  #     - name: "Get ACR Container Information"
-  #       run: |
-  #         echo "Retrieving Container Registry info..."
-  #         acrName=$(az acr list -g $resourceGroup -o tsv --query [0].name)
-  #         CONTAINER_REGISTRY=$(az acr list -g $resourceGroup -o tsv --query [0].loginServer)
-  #         # acr/container registry variables
-  #         echo "::set-env name=CONTAINER_REGISTRY::$(az acr list -g $resourceGroup -o tsv --query [0].loginServer)"
-  #         echo "::set-env name=REGISTRY_USERNAME::$(az acr credential show -n $acrName --query username -o tsv)"
-  #         echo "::set-env name=REGISTRY_PASSWORD::$(az acr credential show -n $acrName -o tsv --query passwords[0].value)"
-  #         echo "::set-env name=dPath::$GITHUB_WORKSPACE/TailwindTraders-Backend/Source"
-  #         echo "::set-env name=pictures::$(az storage account list -g $resourceGroup --query [0].primaryEndpoints.blob -o tsv)"
-  #     # docker login
-  #     - name: "docker login"
-  #       uses: azure/docker-login@v1
-  #       with:
-  #         login-server: ${{ env.CONTAINER_REGISTRY }}
-  #         username: ${{ env.REGISTRY_USERNAME }}
-  #         password: ${{ env.REGISTRY_PASSWORD }}
-  #     - name: "build/push cart.api"
-  #       run: |
-  #         # echo "Your container registry is: $CONTAINER_REGISTRY. Your registry username is: $REGISTRY_USERNAME and your registry password is: $REGISTRY_PASSWORD"
-  #         docker build $dPath/Services/Tailwind.Traders.Cart.Api/ -t $CONTAINER_REGISTRY/cart.api:$GITHUB_SHA
-  #         docker push $CONTAINER_REGISTRY/cart.api:$GITHUB_SHA
-  #     - name: "build/push product.api"
-  #       run: |
-  #         docker build -f $dPath/Services/Tailwind.Traders.Product.Api/Dockerfile $dPath -t $CONTAINER_REGISTRY/product.api:$GITHUB_SHA
-  #         docker push $CONTAINER_REGISTRY/product.api:$GITHUB_SHA
-  #     - name: "build/push profile.api"
-  #       run: |
-  #         docker build -f $dPath/Services/Tailwind.Traders.Profile.Api/Dockerfile $dPath -t $CONTAINER_REGISTRY/profile.api:$GITHUB_SHA
-  #         docker push $CONTAINER_REGISTRY/profile.api:$GITHUB_SHA
-  #     - name: "build/push login.api"
-  #       run: |
-  #         docker build -f $dPath/Services/Tailwind.Traders.Login.Api/Dockerfile $dPath -t $CONTAINER_REGISTRY/login.api:$GITHUB_SHA
-  #         docker push $CONTAINER_REGISTRY/login.api:$GITHUB_SHA
-  #     - name: "build/push coupon.api"
-  #       run: |
-  #         docker build $dPath/Services/Tailwind.Traders.Coupon.Api/ -t $CONTAINER_REGISTRY/coupon.api:$GITHUB_SHA
-  #         docker push $CONTAINER_REGISTRY/coupon.api:$GITHUB_SHA
-  #     - name: "build/push popular-product.api"
-  #       run: |
-  #         docker build -f $dPath/Services/Tailwind.Traders.PopularProduct.Api/Dockerfile $dPath -t $CONTAINER_REGISTRY/popular-product.api:$GITHUB_SHA
-  #         docker push $CONTAINER_REGISTRY/popular-product.api:$GITHUB_SHA
-  #     - name: "build/push stock.api"
-  #       run: |
-  #         docker build $dPath/Services/Tailwind.Traders.Stock.Api/ -t $CONTAINER_REGISTRY/stock.api:$GITHUB_SHA
-  #         docker push $CONTAINER_REGISTRY/stock.api:$GITHUB_SHA
-  #     - name: "build/push image-classifier.api"
-  #       run: |
-  #         docker build -f $dPath/Services/Tailwind.Traders.ImageClassifier.Api/Dockerfile $dPath -t $CONTAINER_REGISTRY/image-classifier.api:$GITHUB_SHA
-  #         docker push $CONTAINER_REGISTRY/image-classifier.api:$GITHUB_SHA
-  #     - name: "build/push mobileapigw"
-  #       run: |
-  #         git -C TailwindTraders-Backend checkout master
-  #         docker build -f $dPath/ApiGWs/Tailwind.Traders.Bff/Dockerfile $dPath -t $CONTAINER_REGISTRY/mobileapigw:$GITHUB_SHA
-  #         docker push $CONTAINER_REGISTRY/mobileapigw:$GITHUB_SHA
-  #     - name: "build/push webapigw"
-  #       run: |
-  #         # git -C TailwindTraders-Backend checkout ed86d5f
-  #         docker build -f $dPath/ApiGWs/Tailwind.Traders.WebBff/Dockerfile $dPath -t $CONTAINER_REGISTRY/webapigw:$GITHUB_SHA
-  #         docker push $CONTAINER_REGISTRY/webapigw:$GITHUB_SHA
-  #     - name: "buid/push web frontend"
-  #       run: |
-  #         rm -rf TailwindTraders-Website
-  #         #git clone https://github.com/microsoft/TailwindTraders-Website.git
-  #         git clone https://github.com/neilpeterson/TailwindTraders-Website.git
-  #         docker build $GITHUB_WORKSPACE/TailwindTraders-Website/Source/Tailwind.Traders.Web/ -t $CONTAINER_REGISTRY/web:$GITHUB_SHA
-  #         docker push $CONTAINER_REGISTRY/web:$GITHUB_SHA
+  buildImages:
+    runs-on: self-hosted
+    needs: deployInfra
+    env:
+      artDockerURL: jfrogjd-docker.jfrog.io
+      ART_URL: https://jfrogjd.jfrog.io/jfrogjd/
+      ART_USER: admin
+      SERVER_ID: jfrog-jd
+      SLACK_CHANNEL: chattybot
+    steps:
+      - name: "jfrog install, configure cli"
+        run: |
+          #Login to Docker with jfrog artifactory creds
+          echo ${{ secrets.ART_PASS }} | docker login $artDocker_URL -u $ART_USER --password-stdin && echo "jfrog docker login successful"
+
+          # Get Jfrog CLI
+          if [ -e jfrog ]; then
+              echo "Jfrog binary already exists. Logging into Artifactory now.."
+          else
+              echo "Jfrog binary does not exist. Downloading now...."
+              wget https:// dl.bintray.com/jfrog/jfrog-cli-go/1.24.2/jfrog-cli-linux-amd64/jfrog
+              chmod +x jfrog
+          fi
+
+          # Configure Jfrog CLI
+          ./jfrog rt config $SERVER_ID --url=$ART_URL --user=$ART_USER --password=${{ secrets.ART_PASS }}
+      - name: "jfrog maven build"
+        run: |
+          # --- jfrog Maven Build
+          export M2_HOME=/usr/share/maven
+          ./jfrog rt mvn "clean install -Dproject.version=$GITHUB_SHA -Dartifactory.publish.buildInfo=true" maven.yaml --build-name=$GITHUB_WORKFLOW --build-number=$GITHUB_RUN_ID
+
+      # docker login
+      - name: "docker login"
+        uses: azure/docker-login@v1
+        with:
+          login-server: $artDockerURL
+          username: $ART_USER
+          password: ${{ secrets.ART_PASS }}
+
+      # build/push
+      - name: "build/push chattybot"
+        run: |
+          docker build -f Dockerfile . -t $CONTAINER_REGISTRY/chattybot:$GITHUB_SHA
+          docker push $CONTAINER_REGISTRY/chattybot:$GITHUB_SHA
+
+      # helm lint
+      - name: "helm lint"
+        run: |
+          helm lint charts/spring-boot-websocket-chat-demo
+
+      - name: "helm package"
+        run: |
+          helm package charts/spring-boot-websocket-chat-demo
+
+      - name: "publish build info to artifactory"
+        run: |
+          # --- JFrog Publish Build Info to Artifactory
+          #./jfrog rt build-add-dependencies $GITHUB_WORKFLOW $GITHUB_RUN_ID "target/*.jar"
+          ./jfrog rt build-collect-env $GITHUB_WORKFLOW $GITHUB_RUN_ID
+          ./jfrog rt build-add-git $GITHUB_WORKFLOW $GITHUB_RUN_ID
+
+          # --- Jfrog Docker Push
+          ./jfrog rt docker-push --server-id=$SERVER_ID --build-name=$GITHUB_WORKFLOW --build-number=$GITHUB_RUN_ID "$artDocker_URL/$GITHUB_REPOSITORY:$GITHUB_RUN_ID" docker-dev
+
+          # --- Upload Helm Chart Artifact to Artifactory
+          ./jfrog rt upload --server-id=$SERVER_ID --build-name=$GITHUB_WORKFLOW --build-number=$GITHUB_RUN_ID "$GITHUB_WORKSPACE/*.tgz" helm-repo
+          # -- build publish
+          ./jfrog rt build-publish --build-url="https://github.com/$GITHUB_REPOSITORY/runs/$GITHUB_RUN_ID" --env-exclude="*key*;*pass*;" $GITHUB_WORKFLOW $GITHUB_RUN_ID |& tee publish.txt
+
+          # --- Xray Scan
+          ./jfrog rt build-scan --server-id=$SERVER_ID $GITHUB_WORKFLOW $GITHUB_RUN_ID | tee results.json
+
+      - name: "slack build trigger"
+        run: |
+          ## Jfrog Build
+          JF_BUILD=$(sed -n "s/^.*http/http/p" publish.txt)
+
+          curl -X POST https://slack.com/api/chat.postMessage -H 'Accept: */*'   -H 'Authorization: Bearer ${{ secrets.slackBotToken }}'   -H 'Connection: keep-alive'   -H 'Content-Type: application/json; charset=utf-8'   -H 'accept-encoding: gzip, deflate'   -d '{"channel": "$SLACK_CHANNEL", "text": "Jfrog Artifactory Build $GITHUB_RUN_ID Information", "attachments": [
+                  {
+                      "fallback": "JFrog Artifactory Build $GITHUB_RUN_ID Information",
+                      "color": "#36a64f",
+                      "author_link": "'$JF_BUILD'",
+                      "title": "JFrog Build Artifacts",
+                      "title_link": "'$JF_BUILD'",
+                      "text": "Build Artifacts for $GITHUB_RUN_ID",
+                      "fields": [
+                          {
+                              "title": "Requested for",
+                              "value": "Jessica Deen",
+                              "short": false
+                          }
+                      ],
+                      "footer": "JFrog Artifactory Notifications",
+                      "footer_icon": "https://www.clipartmax.com/png/middle/69-698347_jfrog-artifactory-logo.png"
+                  }
+              ]
+          }' && echo "Slack Build Message Posted"
+
+      - name: "Slack Xray Trigger"
+        run: |
+          ## Jfrog Xray Scan
+
+          JF_XRAY_ALERTS=$(jq ".summary.total_alerts" results.json)
+          JF_SCAN_FAIL=$(jq ".summary.fail_build" results.json)
+          JF_XRAY_RPT="https://jfrogjd-xray.jfrog.io/web/#/component/details/docker:~2F~2Fjldeen~2Fspring-boot-websocket-chat-demo/$GITHUB_RUN_ID"
+
+          if [[ $JF_XRAY_ALERTS -eq 0 ]]; then
+            slackStyle=good && echo "No Xray Scan alerts found"
+          else
+            slackStyle=danger && echo "Xray scan alerts found"
+          fi
+
+          curl -X POST https://slack.com/api/chat.postMessage -H 'Accept: */*'   -H 'Authorization: Bearer $(slackBotToken)'   -H 'Connection: keep-alive'   -H 'Content-Type: application/json; charset=utf-8'   -H 'accept-encoding: gzip, deflate'   -d '{"channel": "$SLACK_CHANNEL", "text": "JFrog XRay Scan Report for GitHub Run $GITHUB_RUN_ID", "attachments": [
+                  {
+                      "fallback": "JFrog XRay Scan Report for GitHub Run $GITHUB_RUN_ID",
+                      "color": "'$slackStyle'",
+                      "author_link": "'$JF_XRAY_RPT'",
+                      "title": "JFrog XRay Scan Report",
+                      "title_link": "'$JF_XRAY_RPT'",
+                      "text": "JFrog Xray Scan Report for GitHub Run $GITHUB_RUN_ID",
+                      "fields": [
+                          {
+                              "title": "XRay Alerts",
+                              "value": "'$JF_XRAY_ALERTS' alerts were generated",
+                              "short": false
+                          },
+                          {
+                              "title": "Requested for",
+                              "value": "Jessica Deen",
+                              "short": false
+                          }
+                      ],
+                      "footer": "JFrog XRay Scan Notifications",
+                      "footer_icon": "https://www.clipartmax.com/png/middle/69-698347_jfrog-artifactory-logo.png"
+                  }
+              ]
+          }' > /dev/null 2>&1 && echo "Slack XRay Message Posted"
+          #if [[ "'$JF_SCAN_FAIL'" = *true* ]]; then exit 1; else exit 0; fi
   # deployMicroservices:
   #   runs-on: self-hosted
   #   needs: buildImages
   #   env:
-  #     nameSpace: twt
-  #   steps:
+  #     nameSpace: jfrog
+  # steps:
   #     - name: "configure deployment environment"
   #       run: |
   #         # set for this step
