--- a/codefresh.yml
+++ b/codefresh.yml
@@ -11,15 +11,6 @@ steps:
     repo: "jldeen/spring-boot-websocket-chat-demo"
     revision: "${{CF_BRANCH}}"
     stage: "build"
-
-  re_clone:
-    title: "prepping main repository..."
-    image: alpine/git:latest
-    stage: "build"
-    commands:
-    - cd ${{CF_VOLUME_PATH}}
-    - rm -rf ${{CF_REPO_NAME}}
-    - git clone https://github.com/jldeen/${{CF_REPO_NAME}}
         
   jFrogMavenBuild:
     title: Use Jfrog special build to make jar
@@ -107,37 +98,24 @@ steps:
           - /var/run/docker.sock:/var/run/docker.sock
           - /var/lib/docker:/var/lib/docker
           - '${{CF_VOLUME_NAME}}:/codefresh/volume'
-  
-  # jfrogcollectbuildinfo:
-  #   title: upload helm chart and build info
-  #   image: jldeen/docker-jfrog-cli-java:1.0.1
-  #   working_dir: ${{jFrogMavenBuild}}
-  #   shell: bash
-  #   stage: "build"
-  #   commands:
-  #   - jfrog rt config ${{JFROG_SERVER_ID}} --url=https://jfrogjd.jfrog.io/jfrogjd --user=${{JFROG_USER}} --password=${{JFROG_PASS}}
-  #   - jfrog rt upload --build-name=${{CF_REPO_NAME}} --build-number=${{CF_BUILD_ID}} "$PACKAGE" helm-repo
-  #   - jfrog rt build-publish --build-url="${{CF_BUILD_URL}}" --env-exclude="*key*;*pass*;" ${{CF_REPO_NAME}} ${{CF_BUILD_ID}} |& tee publish.txt
-  #   - codefresh auth create-context --api-key ${{CODEFRESH_CLI_KEY}}
-  #   - export JF_BUILD=$(sed -n "s/^.*http/http/p" publish.txt)
-  #   - codefresh annotate image jldeen/chattybot:$CF_BRANCH_TAG_NORMALIZED-$CF_SHORT_REVISION --label JF_BUILD=$JF_BUILD
-  #   - cf_export JF_BUILD=$(sed -n "s/^.*http/http/p" publish.txt)
     
   security_scan:
     title: Xray Security Scan
-    image: jldeen/docker-jfrog-cli-java:1.0.1
+    image: jldeen/docker-jfrog-cli-java:1.0.2
     stage: "test"
     shell: bash
     commands:
     - jfrog rt config ${{JFROG_SERVER_ID}} --url=https://jfrogjd.jfrog.io/jfrogjd --user=${{JFROG_USER}} --password=${{JFROG_PASS}}
-    - jfrog rt build-scan ${{CF_REPO_NAME}} ${{CF_BUILD_ID}} | tee results.json
+    - jfrog rt build-scan --server-id=${{JFROG_SERVER_ID}} ${{CF_REPO_NAME}} ${{CF_BUILD_ID}} | tee results.json
     - export JF_BUILD=$(sed -n "s/^.*http/http/p" publish.txt)
     - export JF_XRAY_ALERTS=$(jq ".summary.total_alerts" results.json)
     - export JF_XRAY_MSG=$(jq ".summary.message" results.json)
-    - echo $JF_XRAY_MSG
+    - echo "$JF_XRAY_MSG"
+    - echo "$JF_XRAY_ALERTS"
     - export JF_XRAY_RPT="https://jfrogjd-xray.jfrog.io/web/#/component/details/docker:~2F~2Fjldeen~2Fchattybot/${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}"
     - if [[ $JF_XRAY_ALERTS -eq 0 ]]; then slackStyle=good; else slackStyle=danger; fi
     - codefresh annotate image jldeen/chattybot:$CF_BRANCH_TAG_NORMALIZED-$CF_SHORT_REVISION --label JF_XRAY_ALERTS=$JF_XRAY_ALERTS --label JF_XRAY_MSG=$JF_XRAY_MSG --label JF_XRAY_RPT=$JF_XRAY_RPT
+    - cf_export JF_BUILD=$(sed -n "s/^.*http/http/p" publish.txt)
     - cf_export JF_SCAN_FAIL=$(jq ".summary.fail_build" results.json)
     - cf_export JF_XRAY_ALERTS=$(jq ".summary.total_alerts" results.json)
     - cf_export JF_XRAY_RPT="https://jfrogjd-xray.jfrog.io/web/#/component/details/docker:~2F~2Fjldeen~2Fchattybot/${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}"
@@ -176,14 +154,12 @@ steps:
    type: pending-approval
    stage: "test"
    title: Promote to QA/Prod
-    
+      
   Deploy_with_Helm:
-    image: codefresh/cfstep-helm:2.14.1
+  	# image: codefresh/cfstep-helm:2.14.1
+    image: jldeen/cfstep-helm:3.0.0-beta.4
     stage: "deploy"
     when:
-      branch:
-        only:
-          - master
       steps:
       - name: askForPermission
         on:
