--- a/.github/workflows/jdk8s-cicd.yaml
+++ b/.github/workflows/jdk8s-cicd.yaml
@@ -347,8 +347,8 @@ jobs:
       # build/push
       - name: "build/push chattybot"
         run: |
-          docker build -f Dockerfile . -t $CONTAINER_REGISTRY/chattybot:$GITHUB_SHA
-          docker push $CONTAINER_REGISTRY/chattybot:$GITHUB_SHA
+          docker build -f Dockerfile . -t $artDockerURL/chattybot:$GITHUB_SHA
+          docker push $artDockerURL/chattybot:$GITHUB_SHA
 
       # helm lint
       - name: "helm lint"
