--- a/.github/workflows/jdk8s-cicd.yaml
+++ b/.github/workflows/jdk8s-cicd.yaml
@@ -347,6 +347,7 @@ jobs:
       # build/push
       - name: "build/push chattybot"
         run: |
+          echo ${{ secrets.ART_PASS }} | docker login $artDockerURL -u $ART_USER --password-stdin && echo "jfrog docker login successful"
           docker build . -t $artDockerURL/chattybot:${{ github.sha }}
           docker push $artDockerURL/chattybot:${{ github.sha }}
 
