--- a/.github/workflows/jdk8s-cicd.yaml
+++ b/.github/workflows/jdk8s-cicd.yaml
@@ -382,7 +382,7 @@ jobs:
           ## Jfrog Build
           JF_BUILD=$(sed -n "s/^.*http/http/p" publish.txt)
 
-          curl -X POST --data-urlencode 'payload={"text":"Jfrog Artifactory Build $GITHUB_RUN_ID Information","attachments":[{"fallback":"JFrog Artifactory Build $GITHUB_RUN_ID Information","color":"#36a64f","author_link":"'$JF_BUILD'","title":"JFrog Build Artifacts","title_link":"'$JF_BUILD'","text":"Build Artifacts for $GITHUB_RUN_ID","fields":[{"title":"Requested for","value":"Jessica Deen","short":false}],"footer":"JFrog Artifactory Notifications","footer_icon":"https:\/\/www.clipartmax.com\/png\/middle\/69-698347_jfrog-artifactory-logo.png"}]}' ${{ secrets.SLACK_WEBHOOK_URL}} && echo "Slack Build Message Posted"
+          curl -X POST --data-urlencode 'payload={"text":"Jfrog Artifactory Build ${{ GITHUB_RUN_ID }} Information","attachments":[{"fallback":"JFrog Artifactory Build ${{ GITHUB_RUN_ID }} Information","color":"#36a64f","author_link":"'$JF_BUILD'","title":"JFrog Build Artifacts","title_link":"'$JF_BUILD'","text":"Build Artifacts for ${{ GITHUB_RUN_ID }}","fields":[{"title":"Requested for","value":"Jessica Deen","short":false}],"footer":"JFrog Artifactory Notifications","footer_icon":"https:\/\/www.clipartmax.com\/png\/middle\/69-698347_jfrog-artifactory-logo.png"}]}' ${{ secrets.SLACK_WEBHOOK_URL}} && echo "Slack Build Message Posted"
 
       - name: "slack xray trigger"
         run: |
@@ -390,7 +390,7 @@ jobs:
 
           JF_XRAY_ALERTS=$(jq ".summary.total_alerts" results.json)
           JF_SCAN_FAIL=$(jq ".summary.fail_build" results.json)
-          JF_XRAY_RPT="https://jfrogjd-xray.jfrog.io/web/#/component/details/docker:~2F~2Fchattybot/$GITHUB_RUN_ID"
+          JF_XRAY_RPT="https://jfrogjd-xray.jfrog.io/web/#/component/details/docker:~2F~2Fchattybot/${{GITHUB_RUN_ID}}"
 
           if [[ $JF_XRAY_ALERTS -eq 0 ]]; then
             slackStyle=good && echo "No Xray Scan alerts found"
