--- a/.github/workflows/jdk8s-cicd.yaml
+++ b/.github/workflows/jdk8s-cicd.yaml
@@ -390,7 +390,7 @@ jobs:
 
           JF_XRAY_ALERTS=$(jq ".summary.total_alerts" results.json)
           JF_SCAN_FAIL=$(jq ".summary.fail_build" results.json)
-          JF_XRAY_RPT="https://jfrogjd-xray.jfrog.io/web/#/component/details/build:~2F~2Fjdk8s-full-cicd%$GITHUB_RUN_ID"
+          JF_XRAY_RPT="https://jfrogjd-xray.jfrog.io/web/#/component/details/build:~2F~2Fjdk8s-full-cicd%2F$GITHUB_RUN_ID"
 
           if [[ $JF_XRAY_ALERTS -eq 0 ]]; then
             slackStyle=good && echo "No Xray Scan alerts found"
