--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,12 @@
 		    <artifactId>spring-boot-starter-reactor-netty</artifactId>
 		</dependency>
 
+		<!-- <dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>5.2.3.RELEASE</version>
+		</dependency> -->
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -74,7 +80,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
-    		<artifactId>jackson-databind</artifactId>
+			<artifactId>jackson-databind</artifactId>
 			<version>2.10.0.pr3</version>
 		</dependency>
 		<dependency>
