--- a/pom.xml
+++ b/pom.xml
@@ -4,31 +4,31 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.jldeen</groupId>
-	<artifactId>websocket-demo</artifactId>
-	<version>1.0.4-SNAPSHOT</version>
+	<artifactId>chattybot-demo</artifactId>
+	<version>1.0.5-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>websocket-demo</name>
+	<name>chattybot-demo</name>
 	<description>Spring Boot WebSocket Chat Demo</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.2.4.RELEASE</version>
+		<version>2.2.1.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
 	<distributionManagement>
-    <repository>
-        <id>central</id>
-        <name>jfrogjd-releases</name>
-        <url>https://jfrogjd.jfrog.io/jfrogjd/libs-release</url>
-    </repository>
-    <snapshotRepository>
-        <id>snapshots</id>
-        <name>jfrogjd-snapshots</name>
-        <url>https://jfrogjd.jfrog.io/jfrogjd/libs-snapshot</url>
-    </snapshotRepository>
+		<repository>
+			<id>central</id>
+			<name>jfrogjd-releases</name>
+			<url>https://jfrogjd.jfrog.io/jfrogjd/libs-release</url>
+		</repository>
+		<snapshotRepository>
+			<id>snapshots</id>
+			<name>jfrogjd-snapshots</name>
+			<url>https://jfrogjd.jfrog.io/jfrogjd/libs-snapshot</url>
+		</snapshotRepository>
 	</distributionManagement>
 
 	<properties>
@@ -41,61 +41,30 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-websocket</artifactId>
-			<version>2.2.4.RELEASE</version>
 		</dependency>
 
 		<!-- RabbitMQ Starter Dependency (Not required if you're using the simple in-memory broker for STOMP) -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-amqp</artifactId>
-			<version>2.2.4.RELEASE</version>
 		</dependency>
 
 		<!-- Following dependency is required for Full Featured STOMP Broker Relay -->
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-reactor-netty</artifactId>
-			<version>2.2.4.RELEASE</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-web</artifactId>
-			<version>5.2.3.RELEASE</version>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-reactor-netty</artifactId>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
-			<version>2.2.4.RELEASE</version>
-		</dependency>
-
-		<dependency>
-			<groupId>io.netty</groupId>
-			<artifactId>netty-codec-http</artifactId>
-			<version>4.1.45.Final</version>
+			<scope>runtime</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
-			<version>2.2.4.RELEASE</version>
 			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-			<version>2.10.2</version>
-		</dependency>
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-core</artifactId>
-			<version>2.10.2</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-websocket</artifactId>
-			<version>5.2.3.RELEASE</version>
 		</dependency>
 	</dependencies>
 
@@ -104,17 +73,6 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-			<plugin>
-			<artifactId>maven-surefire-plugin</artifactId>
-			<version>2.22.2</version>
-			<dependencies>
-				<dependency>
-				<groupId>org.ow2.asm</groupId>
-				<artifactId>asm</artifactId>
-				<version>6.2</version> 
-				</dependency>
-			</dependencies>
 			</plugin>
 		</plugins>
 	</build>
