--- a/pom.xml
+++ b/pom.xml
@@ -24,11 +24,11 @@
 			<name>jfrogjd-releases</name>
 			<url>https://jfrogjd.jfrog.io/jfrogjd/libs-release</url>
 		</repository>
-		<snapshotRepository>
-			<id>snapshots</id>
-			<name>jfrogjd-snapshots</name>
-			<url>https://jfrogjd.jfrog.io/jfrogjd/libs-snapshot</url>
-		</snapshotRepository>
+			<snapshotRepository>
+				<id>snapshots</id>
+				<name>jfrogjd-snapshots</name>
+				<url>https://jfrogjd.jfrog.io/jfrogjd/libs-snapshot</url>
+			</snapshotRepository>
 	</distributionManagement>
 
 	<properties>
@@ -66,6 +66,26 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.9.10.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>5.2.3.RELEASE</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-codec-http</artifactId>
+			<version>4.1.44.Final</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
