--- a/.github/workflows/jdk8s-cicd.yaml
+++ b/.github/workflows/jdk8s-cicd.yaml
@@ -331,7 +331,7 @@ jobs:
         run: |
           # --- jfrog Maven Build
           export M2_HOME=/usr/share/maven
-          ./jfrog rt mvn "clean install -Dproject.version=$GITHUB_RUN_ID -Dartifactory.publish.buildInfo=true" maven.yaml --build-name=$GITHUB_REPOSITORY --build-number=$GITHUB_RUN_ID
+          ./jfrog rt mvn "clean install -U -Dproject.version=$GITHUB_RUN_ID -Dartifactory.publish.buildInfo=true" maven.yaml --build-name=$GITHUB_REPOSITORY --build-number=$GITHUB_RUN_ID
 
           ./jfrog rt build-collect-env $GITHUB_REPOSITORY $GITHUB_RUN_ID
           ./jfrog rt build-publish $GITHUB_REPOSITORY $GITHUB_RUN_ID
@@ -392,7 +392,7 @@ jobs:
 
           JF_XRAY_ALERTS=$(jq ".summary.total_alerts" results.json)
           JF_SCAN_FAIL=$(jq ".summary.fail_build" results.json)
-          JF_XRAY_RPT="https://jfrogjd-xray.jfrog.io/web/#/component/details/build:~2F~2Fjdk8s-full-cicd%2F$GITHUB_RUN_ID"
+          JF_XRAY_RPT="https://jfrogjd-xray.jfrog.io/web/#/component/details/build:~2F~2Fjldeen%2Fspring-boot-websocket-chat-demo%2F$GITHUB_RUN_ID"
 
           if [[ $JF_XRAY_ALERTS -eq 0 ]]; then
             slackStyle=good && echo "No Xray Scan alerts found"
@@ -420,7 +420,7 @@ jobs:
       - name: "helm install chattybot dev"
         run: |
           # spring deploy
-          helm upgrade --install chattybot-dev $GITHUB_WORKSPACE/charts/spring-boot-websocket-chat-demo-v0.1.0.tgz --namespace=$nameSpace --set ingress.hostname=ghchattybot-dev.k8s.az.jessicadeen.com --set image.repository=$artDockerURL/$GITHUB_REPOSITORY --set image.tag=$GITHUB_SHA --set buildID=$GITHUB_RUN_ID
+          helm upgrade --install chattybot-dev $GITHUB_WORKSPACE/spring-boot-websocket-chat-demo-v0.1.0.tgz --namespace=$nameSpace --set ingress.hostname=ghchattybot-dev.k8s.az.jessicadeen.com --set image.repository=$artDockerURL/$GITHUB_REPOSITORY --set image.tag=$GITHUB_SHA --set buildID=$GITHUB_RUN_ID
 
       - name: "Label all pods for network policy"
         run: |
