demo updates bulk

--- a/.github/workflows/jdk8s-cicd.yaml
+++ b/.github/workflows/jdk8s-cicd.yaml
@@ -332,7 +332,7 @@ jobs:
         run: |
           # --- jfrog Maven Build
           export M2_HOME=/usr/share/maven
-          jfrog rt mvn "clean install -U -Dproject.version=$GITHUB_RUN_ID -Dartifactory.publish.buildInfo=true" maven.yaml --build-name=$GITHUB_REPOSITORY --build-number=$GITHUB_RUN_ID
+          jfrog rt mvn "clean install -U -Dproject.version=$GITHUB_RUN_ID -Dartifactory.publish.buildInfo=true" --build-name=$GITHUB_REPOSITORY --build-number=$GITHUB_RUN_ID
 
           jfrog rt build-collect-env $GITHUB_REPOSITORY $GITHUB_RUN_ID
           jfrog rt build-publish $GITHUB_REPOSITORY $GITHUB_RUN_ID
