--- a/.github/workflows/jdk8s-cicd.yaml
+++ b/.github/workflows/jdk8s-cicd.yaml
@@ -409,6 +409,7 @@ jobs:
     needs: buildImages
     env:
       nameSpace: jfrog
+      artDockerURL: jfrogjd-docker.jfrog.io
     steps:
       - name: "configure deployment environment"
         run: |
