--- a/.github/workflows/jdk8s-cicd.yaml
+++ b/.github/workflows/jdk8s-cicd.yaml
@@ -332,10 +332,10 @@ jobs:
         run: |
           # --- jfrog Maven Build
           export M2_HOME=/usr/share/maven
-          jfrog rt mvn "clean install -U -Dproject.version=$GITHUB_RUN_ID -Dartifactory.publish.buildInfo=true" --build-name=$GITHUB_REPOSITORY --build-number=$GITHUB_RUN_ID
+          jfrog rt mvn "clean install -U -Dproject.version=$GITHUB_RUN_ID -Dartifactory.publish.buildInfo=true" --build-name=$GITHUB_REPOSITORY-2020 --build-number=$GITHUB_RUN_ID
 
-          jfrog rt build-collect-env $GITHUB_REPOSITORY $GITHUB_RUN_ID
-          jfrog rt build-publish $GITHUB_REPOSITORY $GITHUB_RUN_ID
+          jfrog rt build-collect-env $GITHUB_REPOSITORY-2020 $GITHUB_RUN_ID
+          jfrog rt build-publish $GITHUB_REPOSITORY-2020 $GITHUB_RUN_ID
 
       # docker login
       - name: "docker login"
@@ -366,19 +366,19 @@ jobs:
       - name: "publish build info to artifactory"
         run: |
           # --- JFrog Publish Build Info to Artifactory
-          jfrog rt build-collect-env $GITHUB_REPOSITORY $GITHUB_RUN_ID
+          jfrog rt build-collect-env $GITHUB_REPOSITORY-2020 $GITHUB_RUN_ID
 
           # --- Jfrog Docker Push
-          jfrog rt docker-push --server-id=$SERVER_ID --build-name=$GITHUB_REPOSITORY --build-number=$GITHUB_RUN_ID "$artDockerURL/$GITHUB_REPOSITORY:${{ github.sha }}" docker-dev
+          jfrog rt docker-push --server-id=$SERVER_ID --build-name=$GITHUB_REPOSITORY-2020 --build-number=$GITHUB_RUN_ID "$artDockerURL/$GITHUB_REPOSITORY:${{ github.sha }}" docker-dev
 
           # --- Upload Helm Chart Artifact to Artifactory
-          jfrog rt upload --server-id=$SERVER_ID --build-name=$GITHUB_REPOSITORY --build-number=$GITHUB_RUN_ID "$GITHUB_WORKSPACE/*.tgz" helm-repo
+          jfrog rt upload --server-id=$SERVER_ID --build-name=$GITHUB_REPOSITORY-2020 --build-number=$GITHUB_RUN_ID "$GITHUB_WORKSPACE/*.tgz" helm-repo
 
           # -- build publish
-          jfrog rt build-publish --build-url="https://github.com/$GITHUB_REPOSITORY/runs/$GITHUB_RUN_ID" --env-exclude="*key*;*pass*;" $GITHUB_REPOSITORY $GITHUB_RUN_ID |& tee publish.txt
+          jfrog rt build-publish --build-url="https://github.com/$GITHUB_REPOSITORY/runs/$GITHUB_RUN_ID" --env-exclude="*key*;*pass*;" $GITHUB_REPOSITORY-2020 $GITHUB_RUN_ID |& tee publish.txt
 
           # --- Xray Scan
-          jfrog rt build-scan --server-id=$SERVER_ID $GITHUB_REPOSITORY $GITHUB_RUN_ID | tee results.json
+          jfrog rt build-scan --server-id=$SERVER_ID $GITHUB_REPOSITORY-2020 $GITHUB_RUN_ID | tee results.json
 
       - name: "slack build trigger"
         run: |
